fixed overflowing border

--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  margin: 0;
+  background-image: linear-gradient(315deg, #63a4ff 0%, #83eaf1 74%);
 }
 
 #weather-app-container {
